--- a/views/listings/edit.ejs
+++ b/views/listings/edit.ejs
@@ -2,7 +2,7 @@
 <div class="row mt-3">
   <div class="col-8 offset-2">
     <h3>Edit Your Listing</h3>
-    <form method="post" action="/listings/<%=listing._id%>?_method=PUT">
+    <form method="post" action="/listings/<%=listing._id%>?_method=PUT" class="needs-validation" novalidate>
       <div class="mb-3">
         <label for="title" class="form-lable">Title</label>
         <input
@@ -10,14 +10,21 @@
           name="listing[title]"
           value="<%=listing.title%> "
           class="form-control"
+          required
         />
+        <div class="invalid-feedback">
+          Please enter a Good Description for post
+        </div>
+        <div class="valid-feedback">Title Looks Good!!</div>
       </div>
 
       <div class="mb-3">
         <label for="description" class="form-lable">Description</label>
         <textarea type="text" class="form-control" name="listing[description]">
-        <%=listing.description%> </textarea
-        >
+        <%=listing.description%> 
+        </textarea>
+        <div class="invalid-feedback">Please enter a Good Description for post</div>
+          <div class="valid-feedback"> Description's Looks Good!!</div>
       </div>
 
       <div class="mb-3">
@@ -27,7 +34,10 @@
           name="listing[image]"
           value="<%=listing.image%>"
           class="form-control"
-        />
+          required
+          />
+          <div class="invalid-feedback">Please enter a valid Image Link</div>
+          <div class="valid-feedback">Photos links looks good</div>
       </div>
 
       <div class="row">
@@ -39,7 +49,10 @@
             name="listing[price]"
             value="<%=listing.price%>"
             class="form-control"
-          />
+            required
+            />
+            <div class="invalid-feedback">Please enter a valid Price</div>
+            <div class="valid-feedback">Valid Price!!</div>
         </div>
         <div class="mb-3 col-md-8">
           <label for="country" class="form-lable">Country</label>
@@ -48,7 +61,10 @@
             name="listing[country]"
             value="<%=listing.country%>"
             class="form-control"
-          />
+            required
+            />
+            <div class="invalid-feedback">Please enter a valid Country name</div>
+            <div class="valid-feedback">Correct Country!!</div>
         </div>
       </div>
 
@@ -59,11 +75,14 @@
           name="listing[location]"
           value="<%=listing.location%>"
           class="form-control"
-        />
+          required
+          />
+          <div class="invalid-feedback">Please enter a valid Location</div>
+          <div class="valid-feedback">Good Location!!</div>
       </div>
 
       <button class="btn btn-dark edit-btn mt-3">Edit</button>
-      <br><br>
+      <br /><br />
     </form>
   </div>
 </div>
