--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -1,7 +1,7 @@
 <%layout("/layout/boilerplate")%>
 <body>
   
-  <form action="/listings" method="POST">
+  <form action="/listings" method="POST" class="needs-validation" novalidate>
     <div class="row">
       <div class="col-8 offset-2">
         <br>
@@ -14,7 +14,10 @@
             name="listing[title]"
             placeholder="Enter Title"
             class="form-control"
+            required
           />
+          <div class="invalid-feedback">Please enter a Good Description for post</div>
+          <div class="valid-feedback">Title Looks Good!!</div>
         </div>
 
         <div class="mb-3">
@@ -24,7 +27,10 @@
             name="listing[description]"
             placeholder="Enter Description"
             class="form-control"
+            required
           ></textarea>
+          <div class="invalid-feedback">Please enter a Good Description for post</div>
+          <div class="valid-feedback"> Description's Looks Good!!</div>
         </div>
 
         <div class="mb-3">
@@ -36,9 +42,7 @@
             class="form-control"
           />
         </div>
-
         
-
         <div class="row">
             <div class="mb-3 col-md-4">
                 <label for="price" class="form-lable">Price</label>
@@ -47,7 +51,10 @@
                   name="listing[price]"
                   placeholder="Enter Price"
                   class="form-control"
+                  required
                 />
+                <div class="invalid-feedback">Please enter a valid Price</div>
+                <div class="valid-feedback">Valid Price!!</div>
               </div>
 
             <div class="mb-3 col-md-8">
@@ -57,7 +64,10 @@
                   name="listing[country]"
                   placeholder="Enter Country"
                   class="form-control"
+                  required
                 />
+                <div class="invalid-feedback">Please enter a valid Country name</div>
+                <div class="valid-feedback">Correct Country!!</div>
               </div>
         </div>
 
@@ -68,7 +78,10 @@
             name="listing[location]"
             placeholder="Enter Location"
             class="form-control"
+            required
           />
+          <div class="invalid-feedback">Please enter a valid Location</div>
+          <div class="valid-feedback">Good Location!!</div>
         </div>
 
         <br>
