--- a/public/css/style.css
+++ b/public/css/style.css
@@ -59,7 +59,7 @@
 
 
 /* Cards */
-.card {
+.listing-card {
     border: none !important;
     margin-bottom: 1rem;
     /* box-shadow: 2px 2px 6px black; */
