--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -7,7 +7,7 @@
     <% for(let listing of allListings) { %>
       <a href="/listings/<%=listing._id%>" class="listing-link">
         
-        <div class="card col" style="width: 20rem; ">
+        <div class="card listing-card col" style="width: 20rem; ">
             <img 
               src="<%=listing.image%>" 
               class="card-img-top" 
