--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -2,11 +2,11 @@
 
 <div class="row mt-3">
   <div class="col-8 offset-3 mt-3">
-    <h3>Listing Details</h3>
+    <h3><%= listing.title%></h3>
   </div>
 
-  <div class="card col-6 offset-3 show-card">
-    <div class="card" >
+  <div class="card col-6 offset-3 show-card listing-card">
+    <div class="card listing-card">
       <img
         src="<%=listing.image%>"
         class="card-img-top show-img"
@@ -14,7 +14,6 @@
       />
       <div class="card-body">
         <p class="card-text">
-          <b><%= listing.title%></b>
           <br />
           <%= listing.description%>
           <br />
@@ -30,12 +29,73 @@
 </div>
 
 <div class="btns mb-3">
-    <a href="/listings/<%=listing._id%>/edit" class="btn add-btn col-2 offset-3">
-      Edit
-    </a>
-    <form method="post" action="/listings/<%=listing._id%>?_method=DELETE">
-      <button class="btn btn-dark offset-5">Delete</button>
-    </form>
+  <a href="/listings/<%=listing._id%>/edit" class="btn add-btn col-2 offset-3">
+    Edit
+  </a>
+  <form method="post" action="/listings/<%=listing._id%>?_method=DELETE">
+    <button class="btn btn-dark offset-5">Delete</button>
+  </form>
+</div>
+
+<hr />
+
+<div class="col-8 offset-3 mt-3">
+  <h4>Leave a Review</h4>
+  <form
+    action="/listings/<%=listing._id%>/reviews"
+    method="POST"
+    novalidate
+    class="needs-validation"
+  >
+    <!-- For Takng Rating from User -->
+    <div class="mb-3">
+      <label for="rating" class="form-label">Rating</label>
+      <input
+        type="range"
+        min="1"
+        max="5"
+        id="rating"
+        name="review[rating]"
+        class="form-range"
+      />
+    </div>
+
+    <!-- For Taking comment/Feedback from User -->
+    <div class="mb-3">
+      <label for="comment" class="form-label">Comment</label>
+      <textarea
+        name="review[comment]"
+        id="comment"
+        rows="5"
+        cols="70"
+        class="form-control"
+        required
+      ></textarea>
+      <div class="invalid-feedback">Please add some comments for Review</div>
+    </div>
+
+    <button class="btn btn-outline-dark mt-3 mb-3">Add Review</button>
+  </form>
+
+  <hr />
+
+  <p><b>All Reviews</b></p>
+  <div class="row">
+    <%for(review of listing.reviews) {%>
+    <div class="card col-5 ms-3 mb-3">
+      <div class="card-body">
+        <h5 class="card-title">User Name</h5>
+        <p class="card-text"><%= review.comment%></p>
+        <p class="card-text"><%= review.rating%>star</p>
+        <form
+          class="mb-3"
+          method="post"
+          action="/listings/<%=listing._id%>/reviews/<%=review._id%>?_method=DELETE"
+        >
+          <button class="btn btn-dark btn-sm">Delete</button>
+        </form>
+      </div>
+    </div>
+    <%}%>
   </div>
-
-
+</div>
