Commiting All files Updated till Authentication and Autherization.

--- a/views/listings/home.ejs
+++ b/views/listings/home.ejs
@@ -1,7 +1,5 @@
 <%layout("/layout/boilerplate")%>
-<body>
-    Welcome to <h1>Wanderlust</h1> 
-    <br>
-    This is the Home Page of WanderLust
-</body>
-</html>
+Welcome to
+<h1>Wanderlust</h1>
+<br />
+This is the Home Page of WanderLust
