--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -11,10 +11,21 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
-        <a class="nav-link"  href="/">Home</a>
+        <a class="nav-link" href="/">Home</a>
         <a class="nav-link" href="/listings">All Listings</a>
         <a class="nav-link" href="/listings/new">Create New Listing</a>
-        </div>
+      </div>
+
+      <div class="navbar-nav ms-auto">
+        <%if(!currUser) {%>
+          <a class="nav-link " href="/signup">Sign Up</a>
+          <a class="nav-link" href="/login">Log in</a>
+        <%} %> 
+
+        <%if(currUser) {%>
+          <a class="nav-link" href="/logout">Log Out</a>
+        <%} %>
+      </div>
     </div>
   </div>
 </nav>
