--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -1,6 +1,6 @@
 <%layout("/layout/boilerplate")%>
 
-<div class="row mt-3">
+<div class="row mt-1">
   <div class="col-8 offset-3 mt-3">
     <h3><%= listing.title%></h3>
   </div>
@@ -14,20 +14,24 @@
       />
       <div class="card-body">
         <p class="card-text">
-          <br />
-          <%= listing.description%>
-          <br />
-          &#8377;<%= listing.price.toLocaleString("en-IN");%>
-          <br />
-          <%= listing.location%>
-          <br />
-          <%= listing.country%>
+          <b>Own by : <i><%=listing.owner.username %></i></b>
         </p>
+
+        <p class="card-text"><%= listing.description%></p>
+
+        <p class="card-text">
+          &#8377;<%= listing.price.toLocaleString("en-IN");%>
+        </p>
+
+        <p class="card-text"><%= listing.location%></p>
+
+        <p class="card-text"><%= listing.country%></p>
       </div>
     </div>
   </div>
 </div>
 
+<%if(currUser && currUser._id.equals(listing.owner._id)) {%>
 <div class="btns mb-3">
   <a href="/listings/<%=listing._id%>/edit" class="btn add-btn col-2 offset-3">
     Edit
@@ -36,6 +40,7 @@
     <button class="btn btn-dark offset-5">Delete</button>
   </form>
 </div>
+<%}%>
 
 <hr />
 
@@ -76,15 +81,15 @@
 
     <button class="btn btn-outline-dark mt-3 mb-3">Add Review</button>
   </form>
-
   <hr />
+
 
   <p><b>All Reviews</b></p>
   <div class="row">
     <%for(review of listing.reviews) {%>
     <div class="card col-5 ms-3 mb-3">
       <div class="card-body">
-        <h5 class="card-title">User Name</h5>
+        <h5 class="card-title">@<%=review.author.username%></h5>
         <p class="card-text"><%= review.comment%></p>
         <p class="card-text"><%= review.rating%>star</p>
         <form
