--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,15 +1,14 @@
-
-.body {
+html, body {
     font-family: "Plus Jakarta Sans", serif !important;
     display: flex;
     flex-direction: column;
     min-height: 100vh;
 }
 
-.container {
-    flex : 1;
-
+main {
+    flex: 1;
 }
+
 .navbar{
     height: 5rem;
     background-color: #fff !important;
@@ -42,6 +41,7 @@
     flex-wrap: wrap;
     justify-content: center;
     align-items:space-evenly;
+    
     
 }
 
