--- a/views/layout/boilerplate.ejs
+++ b/views/layout/boilerplate.ejs
@@ -24,17 +24,20 @@
       href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="/css/rating.css" />
   </head>
 
   <body>
-    <%- include("../includes/navbar.ejs")%>
+    <header><%- include("../includes/navbar.ejs")%></header>
 
-    <div class="container">
-      <%- include("../includes/flash.ejs")%> 
-      <%-body%>
-    </div>
+    <main>
+      <div class="container">
+        <%- include("../includes/flash.ejs")%> <%-body%>
+      </div>
+    </main>
 
-    <%- include("../includes/footer.ejs")%>
+    <footer><%- include("../includes/footer.ejs")%></footer>
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
