--- a/views/listings/edit.ejs
+++ b/views/listings/edit.ejs
@@ -2,7 +2,13 @@
 <div class="row mt-3">
   <div class="col-8 offset-2">
     <h3>Edit Your Listing</h3>
-    <form method="post" action="/listings/<%=listing._id%>?_method=PUT" class="needs-validation" novalidate>
+    <form
+      method="post"
+      action="/listings/<%=listing._id%>?_method=PUT"
+      class="needs-validation"
+      novalidate
+      enctype="multipart/form-data"
+    >
       <div class="mb-3">
         <label for="title" class="form-lable">Title</label>
         <input
@@ -23,21 +29,26 @@
         <textarea type="text" class="form-control" name="listing[description]">
         <%=listing.description%> 
         </textarea>
-        <div class="invalid-feedback">Please enter a Good Description for post</div>
-          <div class="valid-feedback"> Description's Looks Good!!</div>
+        <div class="invalid-feedback">
+          Please enter a Good Description for post
+        </div>
+        <div class="valid-feedback">Description's Looks Good!!</div>
       </div>
 
       <div class="mb-3">
-        <label for="image" class="form-lable">Image Link</label>
+       <b> Original Listing Image</b>
+       <img src="<%=originalImage%>" alt="Listing Inamge">
+      </div>
+
+      <div class="mb-3">
+        <label for="image" class="form-lable">Upload New Image</label>
         <input
-          type="text"
+          type="file"
           name="listing[image]"
-          value="<%=listing.image%>"
           class="form-control"
-          required
-          />
-          <div class="invalid-feedback">Please enter a valid Image Link</div>
-          <div class="valid-feedback">Photos links looks good</div>
+        />
+        <div class="invalid-feedback">Please enter a valid Image Link</div>
+        <div class="valid-feedback">Photos links looks good</div>
       </div>
 
       <div class="row">
@@ -50,9 +61,9 @@
             value="<%=listing.price%>"
             class="form-control"
             required
-            />
-            <div class="invalid-feedback">Please enter a valid Price</div>
-            <div class="valid-feedback">Valid Price!!</div>
+          />
+          <div class="invalid-feedback">Please enter a valid Price</div>
+          <div class="valid-feedback">Valid Price!!</div>
         </div>
         <div class="mb-3 col-md-8">
           <label for="country" class="form-lable">Country</label>
@@ -62,9 +73,9 @@
             value="<%=listing.country%>"
             class="form-control"
             required
-            />
-            <div class="invalid-feedback">Please enter a valid Country name</div>
-            <div class="valid-feedback">Correct Country!!</div>
+          />
+          <div class="invalid-feedback">Please enter a valid Country name</div>
+          <div class="valid-feedback">Correct Country!!</div>
         </div>
       </div>
 
@@ -76,9 +87,9 @@
           value="<%=listing.location%>"
           class="form-control"
           required
-          />
-          <div class="invalid-feedback">Please enter a valid Location</div>
-          <div class="valid-feedback">Good Location!!</div>
+        />
+        <div class="invalid-feedback">Please enter a valid Location</div>
+        <div class="valid-feedback">Good Location!!</div>
       </div>
 
       <button class="btn btn-dark edit-btn mt-3">Edit</button>
